--- a/pyproject.toml
+++ b/pyproject.toml
@@ -177,6 +177,9 @@ max-branches   = 13
 [tool.ruff.lint.flake8-copyright]
 notice-rgx = "(?i)# SPDX-FileCopyrightText:\\s\\d{4}(-(\\d{4}|present))*"
 
+[tool.ty.rules]
+unresolved-import = "ignore"
+
 [tool.coverage.report]
 exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
 "omit"        = ["eqdsk/_version.py"]
