--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,7 +55,7 @@ docs = [
 ]
 lint = ["ruff", "mypy"]
 cli = ["matplotlib"]
-imas = ["imaspy>=1.1.1"]
+imas = ["imas-python[netcdf]>=2.0"]
 
 [project.scripts]
 eqdsk = "eqdsk.cli:cli"
