Add IMAS integration (#97)
* imas first attempt

* connection sudocode

* imaspy opensourcing and initial skeleton

* Working from_imas implementation

* Correct from_imas, implement to_imas

* Add tests for imas integration

* Add docstring to EQDSKInterface:from_imas

* Handle COCOS for IMAS data dictionary versions 3 and 4

* Finish docstrings for new IMAS methods

* Convert code to IMAS data dictionary version agnostic

* Write test assets to temp directory

* Update comments to include issue #100

* Select smart default writing formats from the file_path type

* Identify IMAS EQDSK with a known COCOS

* Add an IMAS interface section to the docs

* Fix skipping IMAS tests if IMAS not available

* Cleanup docs example

* Use numpy arange

Co-authored-by: Jonathan Matthews <115085094+kj5248@users.noreply.github.com>

---------

Co-authored-by: james <81617086+je-cook@users.noreply.github.com>
Co-authored-by: Jonathan Matthews <115085094+kj5248@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ docs = [
 ]
 lint = ["ruff", "mypy"]
 cli = ["matplotlib"]
+imas = ["imas-python[netcdf]>=2.0"]
 
 [project.scripts]
 eqdsk = "eqdsk.cli:cli"
@@ -65,7 +66,7 @@ features = ["dev", "test", "docs", "lint"]
 
 # env: test
 [tool.hatch.envs.test]
-features = ["test"]
+features = ["test", "imas"]
 [[tool.hatch.envs.test.matrix]]
 python = ["3.10", "3.11", "3.12", "3.13"]
 [tool.hatch.envs.test.scripts]
