--- a/pyproject.toml
+++ b/pyproject.toml
@@ -171,6 +171,7 @@ ignore-names = ["*Bp*", "*R_phi_Z*", "*B0*", "*Ip*", "*CSTM"]
 max-args       = 7
 max-statements = 61
 max-locals     = 18
+max-branches   = 13
 
 
 [tool.ruff.lint.flake8-copyright]
@@ -186,3 +187,5 @@ log_cli        = true
 log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
 log_cli_level  = "INFO"
 markers = ["private: Tests using private data"]
+filterwarnings = ['ignore:Matplotlib is currently using agg:UserWarning',
+                  'ignore:FigureCanvasAgg is non-interactive:UserWarning']
