--- a/pyproject.toml
+++ b/pyproject.toml
@@ -185,7 +185,7 @@ exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
 "omit"        = ["eqdsk/_version.py"]
 
 [tool.pytest.ini_options]
-addopts        = "--html=report.html --self-contained-html --strict-markers -r fEX"
+addopts        = "--html=report.html --self-contained-html --strict-markers -r fEXx"
 log_cli        = true
 log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
 log_cli_level  = "INFO"
