Type checker enforcement and repo cleanup (#89)
* comment take 2

* types and extra data process

* type checker enforcement

* Sign typing

* type helping

* ignore unresolved imports

* ruff legacy alias

* skip ty in precommit ci

* more typing improvements

* fix some types

* mkdocs ignores

* fix isinstance check

* more fixes

* Apply suggestion from @je-cook

* comments

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ Documentation = "https://github.com/Fusion-Power-Plant-Framework/eqdsk#readme"
 Issues        = "https://github.com/Fusion-Power-Plant-Framework/eqdsk/issues"
 
 [project.optional-dependencies]
-dev = ["pre-commit"]
+dev = ["ty>=0.0.18", "pre-commit"]
 test = [
   "pytest",
   "pytest-cov",
@@ -85,9 +85,9 @@ deploy = "mkdocs gh-deploy"
 # env: lint
 [tool.hatch.envs.lint]
 detached     = true                           # Don't inherit from default (does not download project dependencies)
-dependencies = ["ruff", "mypy", "pre-commit"]
+dependencies = ["ruff", "ty", "pre-commit"]
 [tool.hatch.envs.lint.scripts]
-typing = "mypy --install-types --non-interactive {args:eqdsk tests}"
+typing = "ty {args:check .}"
 style  = ["ruff {args:check .}"]
 fmt    = ["pre-commit run --all-files --hook-stage manual {args:}"]
 all    = ["style", "typing"]
@@ -177,12 +177,15 @@ max-branches   = 13
 [tool.ruff.lint.flake8-copyright]
 notice-rgx = "(?i)# SPDX-FileCopyrightText:\\s\\d{4}(-(\\d{4}|present))*"
 
+[tool.ty.rules]
+unresolved-import = "ignore"
+
 [tool.coverage.report]
 exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
 "omit"        = ["eqdsk/_version.py"]
 
 [tool.pytest.ini_options]
-addopts        = "--html=report.html --self-contained-html --strict-markers -r fEX"
+addopts        = "--html=report.html --self-contained-html --strict-markers -r fEXx"
 log_cli        = true
 log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
 log_cli_level  = "INFO"
